Get input to display on the screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>Convert Words to Pig Latin</h1>
 
-      <form id="r">
+      <form id="english">
         <div class="form-group">
           <label for="word">Type a word:</label>
           <input id="word" type="text">
@@ -21,6 +21,8 @@
       </form>
 
       <div id="pig-latin">
+        <!-- <span>Translation</span> -->
+
 
       </div>
     </div>
